[gd_scene load_steps=11 format=3 uid="uid://4ksadcfwwt52"]

[ext_resource type="Script" path="res://systems/ui/menus/shop/shop_buy_section.gd" id="1_nlq55"]
[ext_resource type="Resource" uid="uid://du4544pn8giog" path="res://utils/all_cards_resource.tres" id="2_i7f4d"]
[ext_resource type="Texture2D" uid="uid://dmdpoee7un5qv" path="res://assets/ui/underlays/shop_tray.png" id="3_dc1wl"]
[ext_resource type="Theme" path="res://assets/ui/themes/font_theme.tres" id="4_qsot7"]
[ext_resource type="PackedScene" uid="uid://ba7hqrlkxau6b" path="res://systems/ui/menus/shop/shop_card.tscn" id="5_gtqyr"]
[ext_resource type="Texture2D" uid="uid://dwer7hq8eur8w" path="res://assets/ui/buttons/regular_button_normal.png" id="5_mrvvq"]
[ext_resource type="Texture2D" uid="uid://7o3muws1gqo6" path="res://assets/ui/buttons/regular_button_pressed.png" id="6_orp16"]
[ext_resource type="Texture2D" uid="uid://bsevcaoypxrrw" path="res://assets/ui/buttons/regular_button_hover.png" id="7_y4382"]
[ext_resource type="Texture2D" uid="uid://bfgcr5ueque8m" path="res://assets/ui/buttons/regular_button_disabled.png" id="8_f1wal"]
[ext_resource type="PackedScene" uid="uid://bucg0txabpsyp" path="res://utils/sounds/singleton_interactor.tscn" id="10_6ojby"]

[node name="ShopBuySection" type="Control" node_paths=PackedStringArray("cost_label", "shop_card_1", "shop_card_2", "shop_card_3")]
layout_mode = 3
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0
script = ExtResource("1_nlq55")
all_cards_resource = ExtResource("2_i7f4d")
cost_label = NodePath("PayButton/Label")
shop_card_1 = NodePath("AvailableOffer/HBoxContainer/ShopCard1")
shop_card_2 = NodePath("AvailableOffer/HBoxContainer/ShopCard2")
shop_card_3 = NodePath("AvailableOffer/HBoxContainer/ShopCard3")

[node name="SectionExplanation" type="Control" parent="."]
custom_minimum_size = Vector2(480, 120)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -800.0
offset_top = -928.0
offset_right = -320.0
offset_bottom = -808.0
grow_horizontal = 2
grow_vertical = 0

[node name="TextureRect" type="TextureRect" parent="SectionExplanation"]
layout_mode = 0
offset_left = -1.0
offset_top = -21.0
offset_right = 493.0
offset_bottom = 146.0
texture = ExtResource("3_dc1wl")

[node name="SectionTitle" type="Label" parent="SectionExplanation"]
layout_mode = 0
offset_left = 92.0
offset_top = -87.0
offset_right = 401.0
offset_bottom = 7.0
theme = ExtResource("4_qsot7")
theme_override_font_sizes/font_size = 55
text = "Buy"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label" type="Label" parent="SectionExplanation"]
custom_minimum_size = Vector2(475, 115)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -231.5
offset_top = -53.0
offset_right = 243.5
offset_bottom = 62.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("4_qsot7")
theme_override_font_sizes/font_size = 35
text = "Pay 5 Gold to add a card
to your deck"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="AvailableOffer" type="Control" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(1.65, 1.65)

[node name="HBoxContainer" type="HBoxContainer" parent="AvailableOffer"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -324.0
offset_top = -452.727
offset_right = 324.0
offset_bottom = -186.727
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 72
alignment = 1

[node name="ShopCard1" parent="AvailableOffer/HBoxContainer" instance=ExtResource("5_gtqyr")]
layout_mode = 2
delete_material = null

[node name="ShopCard2" parent="AvailableOffer/HBoxContainer" instance=ExtResource("5_gtqyr")]
layout_mode = 2
delete_material = null

[node name="ShopCard3" parent="AvailableOffer/HBoxContainer" instance=ExtResource("5_gtqyr")]
layout_mode = 2
delete_material = null

[node name="PayButton" type="TextureButton" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -219.0
offset_top = -260.0
offset_right = 219.0
offset_bottom = -148.0
grow_horizontal = 2
grow_vertical = 0
texture_normal = ExtResource("5_mrvvq")
texture_pressed = ExtResource("6_orp16")
texture_hover = ExtResource("7_y4382")
texture_disabled = ExtResource("8_f1wal")

[node name="Label" type="Label" parent="PayButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -45.0
offset_right = 200.0
offset_bottom = 35.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("4_qsot7")
theme_override_font_sizes/font_size = 26
text = "Buy for [amount] Gold"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HoverSound" parent="PayButton" instance=ExtResource("10_6ojby")]
singleton = 1
method_to_call = "_SFX_UIButtonHover"
connect_signal = "mouse_entered"

[node name="PressSound" parent="PayButton" instance=ExtResource("10_6ojby")]
singleton = 1
method_to_call = "_SFX_UIButtonPress"
connect_signal = "button_up"

[connection signal="clicked" from="AvailableOffer/HBoxContainer/ShopCard1" to="." method="_on_shop_card_clicked"]
[connection signal="clicked" from="AvailableOffer/HBoxContainer/ShopCard2" to="." method="_on_shop_card_clicked"]
[connection signal="clicked" from="AvailableOffer/HBoxContainer/ShopCard3" to="." method="_on_shop_card_clicked"]
[connection signal="button_up" from="PayButton" to="." method="_on_pay_button_button_up"]
